Navmenu fixed on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,300&display=swap');
 
+:root{
+    --primary-color: rgb(170,0,0);
+    --menu-color: rgb(221, 206, 206);
+}
+
+
 *{
     margin: 0;
     padding: 0;
@@ -19,7 +25,7 @@ a{
 .navbar{
     position: fixed;
     width: 100vw;
-    background-color: rgb(170,0,0);
+    background-color: var(--primary-color);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,7 +36,7 @@ a{
 
 .nav-logo img{
     height: 4em;
-    color: rgb(241, 182, 182);
+    color: var(--menu-color);
     font-weight: 900;
 }
 
@@ -49,7 +55,7 @@ a{
 }
 
 .nav-link{
-    color: rgb(241, 182, 182);
+    color: var(--menu-color);
     align-items: center;
     padding: 1.2rem;
     margin: 0 .1rem;
@@ -65,7 +71,7 @@ a{
 /* Position absolute to nav-item */
 .nav-dropdown{
     position: absolute;
-    top: 4rem;
+    top: 3.6rem;
     left: .1rem;
     background-color: rgb(160, 46, 46);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.52);
@@ -123,16 +129,13 @@ a{
 }
 
 @media only screen and (max-width: 871px) {
-    .navbar{
-        padding: 1rem 0;
-    }
 
     .nav-menu {
         position: fixed;
         left: 0;
         top: -100%;
         flex-direction: column;
-        background-color: rgb(155, 17, 17);
+        background-color: var(--primary-color);
         width: 100%;
         border-radius: 2px;
         text-align: center;
@@ -168,7 +171,7 @@ a{
 
 
     .nav-menu.active{
-        top: 3.5rem;
+        top: 4rem;
     }
 
     .nav-link{
